fix: fix overflow

--- a/client/src/css/scss/base/_global.scss
+++ b/client/src/css/scss/base/_global.scss
@@ -9,7 +9,7 @@ body {
   background-color: $bg-color-dark-4;
   color: $font-color-light-1;
 
-  overflow-y: hidden;
+  overflow-x: hidden;
 }
 
 code {
